<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:text="@string/assignment1_app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:id="@+id/name"
        android:textSize="24sp"
        android:textColor="@android:color/white" />

    <TextView
        android:text="@string/assignment1_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/email"   />

    <TextView
        android:text="@string/assignment1_school"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/year" />

    <TextView
        android:text="@string/assignment1_program"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/program"   />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/headshot"
        android:scaleType="centerInside"
        android:id="@+id/headShot"
        android:adjustViewBounds="false"
        android:layout_marginTop="5dp"
        android:cropToPadding="false" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:id="@+id/imei"
        android:textColor="@android:color/white" />
</LinearLayout>