<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_multiplayer_demo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:stretchColumns="1">

        <TableRow android:layout_marginBottom="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/multiplayer" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scroggle_player1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/scroggle1"
                android:textColor="@android:color/black"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/play1message"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/play1status"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/play1score"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/play1turn"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scroggle_player2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/scroggle2"
                android:textColor="@android:color/black"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/play2message"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/play2status"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/play2score"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/play2turn"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toggle_player">

            <RadioButton
                android:checked="true"
                android:text="Player 1"
                android:id="@+id/toggle_player1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <RadioButton
                android:text="Player 2"
                android:id="@+id/toggle_player2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RadioGroup>
    </LinearLayout>

</RelativeLayout>